Complete extended sidebar

--- a/index.html
+++ b/index.html
@@ -21,43 +21,65 @@
 <body class="">
     
     <div id="sidebar">
+
+        <img src="./img/logo.svg" alt="logo" class="logo">
+        <img src="./img/logo-small.svg" alt="logo-small" class="logo-small">
+
         <ul class="menu-home">
             <li>
-                <img src="" alt="">
-                <h4></h4>
+                <img src="./img/home.svg" alt="home">
+                <h4 class="active">Home</h4>
             </li>
             <li>
-                <img src="" alt="">
-                <h4></h4>
+                <img src="./img/search.svg" alt="search">
+                <h4>Cerca</h4>
             </li>
             <li>
-                <img src="" alt="">
-                <h4></h4>
+                <img src="./img/libreria.svg" alt="library">
+                <h4>La tua libreria</h4>
             </li>
         </ul>
         <!-- /.menu-home -->
 
         <ul class="playlist">
-            <h3></h3>
-            <li>
-                <div class="add-playlist"></div>
-
+            <h4 class="title">Playlist</h4>
+            <li class="add-playlist">
+                <div class="add-playlist-img">+</div>
+                <h4>Crea Playlist</h4>
             </li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+                <h4>Nome Playlist</h4>
+            </li>
+            <li>
+                <h4>Nome Playlist</h4>
+            </li>
+            <li>
+                <h4>Nome Playlist</h4>
+            </li>
+            <li>
+                <h4>Nome Playlist</h4>
+            </li>
+            <li>
+                <h4>Nome Playlist</h4>
+            </li>
+            <li>
+                <h4>Nome Playlist</h4>
+            </li>
         </ul>
         <!-- /.add-playlist -->
 
         <div class="app-install">
-            <h4></h4>
+            <div class="download">
+                <img src="./img/download.svg" alt="download" class="download-img">
+                <h4>Installa app</h4>
+            </div>
             <hr>
-            <img src="" alt="">
-            <h3></h3>
+            <div class="profile">
+                <div class="profile-img">
+                    <img src="./img/profile.svg" alt="stranger">
+                </div>
+                <h3>John Doe</h3>
+            </div>
         </div>
 
     </div>
