Complete sidebar responsive

--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
             </div>
             <hr>
             <div class="profile">
-                <div class="profile-img">
-                    <img src="./img/profile.svg" alt="stranger">
-                </div>
+                <img src="./img/profile.svg" alt="stranger" class="profile-img">
                 <h3>John Doe</h3>
             </div>
         </div>
