Sidebar links correction

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
+
 <body class="">
     
     <div id="sidebar">
@@ -27,16 +28,22 @@
 
         <ul class="menu-home">
             <li>
-                <img src="./img/home.svg" alt="home">
-                <h4 class="active">Home</h4>
+                <a href="#">
+                    <img src="./img/home.svg" alt="home">
+                    <h4 class="active">Home</h4>
+                </a>
             </li>
             <li>
-                <img src="./img/search.svg" alt="search">
-                <h4>Cerca</h4>
+                <a href="#">
+                    <img src="./img/search.svg" alt="search">
+                    <h4>Cerca</h4>
+                </a>
             </li>
             <li>
-                <img src="./img/libreria.svg" alt="library">
-                <h4>La tua libreria</h4>
+                <a href="#">
+                    <img src="./img/libreria.svg" alt="library">
+                    <h4>La tua libreria</h4>
+                </a>
             </li>
         </ul>
         <!-- /.menu-home -->
@@ -44,34 +51,38 @@
         <ul class="playlist">
             <h4 class="title">Playlist</h4>
             <li class="add-playlist">
-                <div class="add-playlist-img">+</div>
-                <h4>Crea Playlist</h4>
+                <a href="#">
+                    <div class="add-playlist-img">+</div>
+                    <h4>Crea Playlist</h4>
+                </a>
             </li>
             <li>
-                <h4>Nome Playlist</h4>
+                <a href="#"><h4>Nome Playlist</h4></a>
             </li>
             <li>
-                <h4>Nome Playlist</h4>
+                <a href="#"><h4>Nome Playlist</h4></a>
             </li>
             <li>
-                <h4>Nome Playlist</h4>
+                <a href="#"><h4>Nome Playlist</h4></a>
             </li>
             <li>
-                <h4>Nome Playlist</h4>
+                <a href="#"><h4>Nome Playlist</h4></a>
             </li>
             <li>
-                <h4>Nome Playlist</h4>
+                <a href="#"><h4>Nome Playlist</h4></a>
             </li>
             <li>
-                <h4>Nome Playlist</h4>
+                <a href="#"><h4>Nome Playlist</h4></a>
             </li>
         </ul>
         <!-- /.add-playlist -->
 
         <div class="app-install">
             <div class="download">
-                <img src="./img/download.svg" alt="download" class="download-img">
-                <h4>Installa app</h4>
+                <a href="#">
+                    <img src="./img/download.svg" alt="download" class="download-img">
+                    <h4>Installa app</h4>
+                </a>
             </div>
             <hr>
             <div class="profile">
@@ -84,7 +95,7 @@
     <!-- /#sidebar -->
 
     <header id="header">
-
+        <a href="#" class="btn">Effettua l'upgrade</a>
     </header>
     <!-- /#header -->
 
