Complete navbar responsive

--- a/index.html
+++ b/index.html
@@ -103,12 +103,42 @@
         
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>
+                    <a href="#">
+                        <span>In evidenza</span>
+                        <hr class="active">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>Podcast</span>
+                        <hr>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>Classifiche</span>
+                        <hr>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>Generi e mood</span>
+                        <hr>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>Nuove uscite</span>
+                        <hr>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span>Scopri</span>
+                        <hr>
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- /nav -->
