--- a/index.html
+++ b/index.html
@@ -144,16 +144,80 @@
         <!-- /nav -->
 
         <section>
-            <h2></h2>
+            <h2>Recently played</h2>
             <div class="container">
                 <div class="row">
-                    <div class="col-2">
-                        <div class="card">
-                            <img src="" alt="">
-                            <div class="play"></div>
-                            <h3></h3>
-                            <h4></h4>
-                        </div>
+                    <div class="col-2 col-3-md col-6-s">
+                        <a href="#">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="./img/metal_lifting.jpg" alt="metal_lifting">
+                                    <div class="play"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Heavy Metal</h3>
+                                <h4>Subtitle</h4>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-2 col-3-md col-6-s">
+                        <a href="#">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="./img/stranger.jpeg" alt="stranger">
+                                    <div class="play"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                                <h4>Kyle Dixon & Michael Stein</h4>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-2 col-3-md col-6-s">
+                        <a href="#">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="./img/aquietplace.jpeg" alt="a_quite_place">
+                                    <div class="play"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>A quiet place</h3>
+                                <h4>Subtitle</h4>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-2 col-3-md col-6-s">
+                        <a href="#">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="./img/split.jpeg" alt="split">
+                                    <div class="play"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Split</h3>
+                                <h4>Subtitle</h4>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-2 col-3-md col-6-s">
+                        <a href="#">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="./img/cure.jpeg" alt="cure">
+                                    <div class="play"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>A cure for wellness</h3>
+                                <h4>Subtitle</h4>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-2 col-3-md col-6-s">
+                        <a href="#">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="./img/sinister.jpeg" alt="sinister">
+                                    <div class="play"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Sinister</h3>
+                                <h4>Subtitle</h4>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -161,38 +225,10 @@
         <!-- /section1 -->
 
         <section>
-            <h2></h2>
-            <h4></h4>
-            <div class="container">
-                <div class="row">
-                    <div class="col-2">
-                        <div class="card">
-                            <img src="" alt="">
-                            <div class="play"></div>
-                            <h3></h3>
-                            <h4></h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
         <!-- /section2 -->
 
         <section>
-            <h2></h2>
-            <h4></h4>
-            <div class="container">
-                <div class="row">
-                    <div class="col-2">
-                        <div class="card">
-                            <img src="" alt="">
-                            <div class="play"></div>
-                            <h3></h3>
-                            <h4></h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
         <!-- /section3 -->
 
