--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 
         <section>
             <h2>Recently played</h2>
+            <h4 class="d-none">Subtitle</h4>
             <div class="container">
                 <div class="row">
                     <div class="col-2 col-3-md col-6-s">
@@ -225,6 +226,36 @@
         <!-- /section1 -->
 
         <section>
+            <h2>Creato per John Doe</h2>
+            <h4>Più ascolti, più accurati saranno i suggerimenti.</h4>
+            <div class="container">
+                <div class="row">
+                    <div class="col-2 col-3-md col-6-s">
+                        <a href="#">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="./img/radar.jpeg" alt="radar">
+                                    <div class="play"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Release radar</h3>
+                                <h4 class="d-none">Subtitle</h4>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-2 col-3-md col-6-s">
+                        <a href="#">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="./img/mixdaily.jpeg" alt="mixdaily">
+                                    <div class="play"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Daily Mix 1</h3>
+                                <h4 class="d-none">Subtitle</h4>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- /section2 -->
 
