--- a/index.html
+++ b/index.html
@@ -260,6 +260,36 @@
         <!-- /section2 -->
 
         <section>
+            <h2>Artisti più popolari</h2>
+            <h4>Più ascolti, più accurati saranno i suggerimenti.</h4>
+            <div class="container">
+                <div class="row">
+                    <div class="col-2 col-3-md col-6-s">
+                        <a href="#">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="./img/youg.jpeg" alt="young">
+                                    <div class="play"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Young</h3>
+                                <h4>Subtitle</h4>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-2 col-3-md col-6-s">
+                        <a href="#">
+                            <div class="card">
+                                <div class="card-img">
+                                    <img src="./img/einaudi.jpeg" alt="einaudi">
+                                    <div class="play"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Einaudi</h3>
+                                <h4>Subtitle</h4>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- /section3 -->
 
