--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <img src="./img/logo-small.svg" alt="logo-small" class="logo-small">
 
         <ul class="menu-home">
-            <li>
+            <li class="active">
                 <a href="#">
                     <img src="./img/home.svg" alt="home">
-                    <h4 class="active">Home</h4>
+                    <h4>Home</h4>
                 </a>
             </li>
             <li>
@@ -57,22 +57,34 @@
                 </a>
             </li>
             <li>
-                <a href="#"><h4>Nome Playlist</h4></a>
+                <a href="#">
+                    <h4>Nome Playlist</h4>
+                </a>
             </li>
             <li>
-                <a href="#"><h4>Nome Playlist</h4></a>
+                <a href="#">
+                    <h4>Nome Playlist</h4>
+                </a>
             </li>
             <li>
-                <a href="#"><h4>Nome Playlist</h4></a>
+                <a href="#">
+                    <h4>Nome Playlist</h4>
+                </a>
             </li>
             <li>
-                <a href="#"><h4>Nome Playlist</h4></a>
+                <a href="#">
+                    <h4>Nome Playlist</h4>
+                </a>
             </li>
             <li>
-                <a href="#"><h4>Nome Playlist</h4></a>
+                <a href="#">
+                    <h4>Nome Playlist</h4>
+                </a>
             </li>
             <li>
-                <a href="#"><h4>Nome Playlist</h4></a>
+                <a href="#">
+                    <h4>Nome Playlist</h4>
+                </a>
             </li>
         </ul>
         <!-- /.add-playlist -->
@@ -80,7 +92,7 @@
         <div class="app-install">
             <div class="download">
                 <a href="#">
-                    <img src="./img/download.svg" alt="download" class="download-img">
+                    <img src="./img/download.svg" alt="download">
                     <h4>Installa app</h4>
                 </a>
             </div>
@@ -304,25 +316,35 @@
                 <h5>Brano Nome</h5>
             </div>
             <div class="icons">
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-regular fa-folder"></i>
+                <a href="#">
+                    <i class="fa-regular fa-heart"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-regular fa-folder"></i>
+                </a>
             </div>
         </div>
         <div class="player">
             <div class="player-console">
                 <i class="fa-solid fa-shuffle"></i>
                 <i class="fa-solid fa-backward-step"></i>
-                <i class="fa-regular fa-circle-play"></i>
+                <a href="#">
+                    <i class="fa-regular fa-circle-play"></i>
+                </a>
                 <i class="fa-solid fa-forward-step"></i>
                 <i class="fa-solid fa-rotate-right"></i>
             </div>
             <div class="player-time">
                 <h5>0:25</h5>
-                <div class="progression-bar">
-                    <div class="bar">
-                        <div class="progression"></div>
+                <a href="#">
+                    <div class="progression-bar">
+                        <div class="bar">
+                            <div class="progression">
+                                <div class="circle"></div>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                </a>
                 <h5>4:35</h5>
             </div>
         </div>
@@ -330,11 +352,15 @@
             <i class="fa-solid fa-list-ul"></i>
             <i class="fa-solid fa-display"></i>
             <i class="fa-solid fa-volume-high"></i>
-            <div class="progression-bar">
-                <div class="bar">
-                    <div class="progression"></div>
+            <a href="#">
+                <div class="progression-bar">
+                    <div class="bar">
+                        <div class="progression">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
     </footer>
     <!-- /#footer -->
