--- a/index.html
+++ b/index.html
@@ -32,18 +32,21 @@
                     <img src="./img/home.svg" alt="home">
                     <h4>Home</h4>
                 </a>
+                <div class="left-highlight"></div>
             </li>
             <li>
                 <a href="#">
                     <img src="./img/search.svg" alt="search">
                     <h4>Cerca</h4>
                 </a>
+                <div class="left-highlight"></div>
             </li>
             <li>
                 <a href="#">
                     <img src="./img/libreria.svg" alt="library">
                     <h4>La tua libreria</h4>
                 </a>
+                <div class="left-highlight"></div>
             </li>
         </ul>
         <!-- /.menu-home -->
